--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -28,7 +28,7 @@ header div.container.header {
       position: absolute;
       width: 100%;
       height: 100%;
-      padding: 0 15px;
+      padding: 0 5px;
 
       a {
         display: block;
@@ -137,6 +137,11 @@ header div.container.header {
     padding: 0 10%;
   }
 
+  .row {
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+
   * {
     font-weight: 300;
   }
@@ -194,6 +199,8 @@ header div.container.header {
     }
 
     #introduction {
+    padding-top: 100px;
+    
       p {
         max-width: 700px;
         font-size: 13pt;
