--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -87,8 +87,7 @@ header div.container.header {
             }
 
             &.rounded-corners {
-              border-radius: 5px;
-              
+              border-radius: 20%; 
             }
           }
         }
