--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -87,7 +87,12 @@ header div.container.header {
             }
 
             &.rounded-corners {
-              border-radius: 20%; 
+              border-radius: 20%;
+            }
+
+            &.very-rounded-corners {
+              border-radius: 40%;
+              
             }
           }
         }
