--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -6191,8 +6191,25 @@ main#plings-page{
     padding-right: 15px;
     padding-left: 15px;
     min-width: 200px; 
-    padding-top: 20px;
-   
+    padding-top: 20px;   
+  }
+
+  .tag-element {
+      background-clip: padding-box;
+      background-color: #eeeeee;
+      background-image: linear-gradient(#f4f4f4 20%, #f0f0f0 50%, #e8e8e8 52%, #eee 100%);
+      background-repeat: repeat-x;
+      background-size: 100% 19px;
+      border: 1px solid #aaa;
+      border-radius: 3px;
+      box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
+      color: #333;
+      line-height: 25px !important;
+      margin: 3px 3px 3px 0;
+      max-width: 100%;
+      padding: 0 10px;
+      position: relative;
+      display: inline-block;
   }
 }
 
