--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -25,14 +25,14 @@
   $this->users = $modelInfo->getNewActiveMembers(12);
   $this->supporters = $modelInfo->getNewActiveSupporters(12);
   //$this->plingproducts = $modelInfo->getNewActivePlingProduct(9);
-  $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5);
-  $this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5);
-  $this->productsWindowmanager = $modelInfo->getLastProductsForHostStores(5);
-  $this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5);
-  $this->productsScreenshots= $modelInfo->getLastProductsForHostStores(5);
-  $this->productsApps = $modelInfo->getLastProductsForHostStores(5);
-  $this->productsAddons = $modelInfo->getLastProductsForHostStores(5);
-  $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5);
+  $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(6);
+  $this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(6);
+  $this->productsWindowmanager = $modelInfo->getLastProductsForHostStores(6);
+  $this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(6);
+  $this->productsScreenshots= $modelInfo->getLastProductsForHostStores(6);
+  $this->productsApps = $modelInfo->getLastProductsForHostStores(6);
+  $this->productsAddons = $modelInfo->getLastProductsForHostStores(6);
+  $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(6);
   $this->countSupporters = $modelInfo->getCountActiveSupporters();
 
   $topProducts = new Default_View_Helper_FetchTopProductsForStore();
@@ -55,7 +55,7 @@
 
 <link type="text/css" rel="stylesheet" href="/theme/react/lib/mdl/material.min.css"/>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500" rel="stylesheet">
+><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="/theme/react/assets/css/style.css"/>
 
 <main id="explore-content"></main>
