--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -11,24 +11,24 @@ header div.container.header {
   .products-container {
 
     .square {
-      width: 20%;
+      width: 16.66667%;
       position: relative;
       float: left;
       margin-bottom: 15px;
     }
 
-
     .square:after {
       content: "";
       display: block;
-      padding-bottom: 100%;
+      padding-bottom: 120%;
+      
     }
 
     .content {
       position: absolute;
       width: 100%;
       height: 100%;
-      padding: 0 5px;
+      padding: 0 6px;
 
       a {
         display: block;
@@ -42,7 +42,6 @@ header div.container.header {
         width: 100%;
         height: 100%;
         background-color: white;
-        .transition();
       }
 
       .product-image-container {
@@ -102,10 +101,11 @@ header div.container.header {
         width: 100%;
         height: 60px;
         color: white;
-        padding: 10px;
+        padding:14px 16px;
         position:  absolute;
         bottom: 0;
         left: 0;
+        background-color: rgba(0,0,0,.38);
 
         span {
           width: 100%;
@@ -113,11 +113,11 @@ header div.container.header {
           overflow: hidden;
           white-space: nowrap;
           text-overflow: ellipsis;
-          line-height: 1.5;
+          line-height: 1.2;
+          font-weight: 500 !important;
 
           &.product-info-title {
-            font-size: 80%;
-            font-weight: 500 !important;
+            font-size: 85%;
           }
 
           &.product-info-description {
@@ -168,8 +168,8 @@ header div.container.header {
   }
 
   .row {
-    margin-left: -5px;
-    margin-right: -5px;
+    margin-left: -6px;
+    margin-right: -6px;
   }
 
   * {
@@ -177,9 +177,10 @@ header div.container.header {
   }
 
   .mdl-button {
-    text-transform: lowercase !important;
+    text-transform: capitalize !important;
     font-size: 14px !important;
     font-weight: 500 !important;
+    font-family: Source Sans Pro,Source Sans,sans-serif !important;
   }
 
   .hp-section {
@@ -191,26 +192,29 @@ header div.container.header {
 
       .actions {
         position: absolute;
-        top: 0;
+        top: 5px;
         right: 0;
       }
     }
+
 
     h1, h2, h3, h4, h5 ,h6 {
       width: 100%;
       margin-top: 0;
       text-transform: capitalize;
       font-weight: 300;
+      color: black !important;
     }
 
     h2 {
-      padding-bottom: 15px;
+      padding-bottom: 0;
       font-size: 40px;
+      margin-bottom: 1em;
     }
 
     h3 {
-      font-size: 30px;
-      margin-bottom: 5px;
+      font-size: 28px;
+      margin-bottom: 10px;
     }
 
     &:nth-child(even){
@@ -229,16 +233,39 @@ header div.container.header {
     }
 
     #introduction {
-    padding-top: 100px;
+      padding-top: 100px;
+      margin-bottom: 30px;
 
       p {
         max-width: 700px;
-        font-size: 13pt;
+        font-size: 15pt;
+        line-height: 1.4;
+        margin-bottom: 45px;
+
       }
     }
 
   }
 }
+
+@media (min-width: 1920px) {
+  #app-root {
+    .container {
+      padding: 0 15%;
+    }
+  }
+}
+
+@media (max-width: 1500px) and (min-width: 1251px) {
+  .products-showcase {
+    .products-container {
+      .square {
+        width: 20%;
+      }
+    }
+  }
+}
+
 
 @media (max-width: 1250px) and (min-width: 1000px) {
   .products-showcase {
@@ -251,6 +278,11 @@ header div.container.header {
 }
 
 @media (max-width: 999px) and (min-width: 662px) {
+  #app-root {
+    .container {
+      padding: 0 5%;
+    }
+  }
   .products-showcase {
     .products-container {
       .square {
@@ -261,6 +293,11 @@ header div.container.header {
 }
 
 @media (max-width: 661px) {
+  #app-root {
+    .container {
+      padding: 0 5%;
+    }
+  }
   .products-showcase {
     .products-container {
       .square {
@@ -271,6 +308,11 @@ header div.container.header {
 }
 
 @media (max-width: 401px) {
+  #app-root {
+    .container {
+      padding: 0 5%;
+    }
+  }
   .products-showcase {
     .products-container {
       .square {
