--- a/application/modules/backend/views/scripts/store/index.phtml
+++ b/application/modules/backend/views/scripts/store/index.phtml
@@ -180,6 +180,13 @@
                     values: { '0': 'No', '1': 'Yes' },
                     defaultValue: '0'
                 },
+                 is_show_title: {
+                    title: 'Title shown',
+                    list: true,
+                    type: 'checkbox',
+                    values: { '0': 'No', '1': 'Yes' },
+                    defaultValue: '1'
+                },
 /*                initSearchIndex: {
                     title: '',
                     width: '1%',
