--- a/application/modules/backend/views/scripts/store/index.phtml
+++ b/application/modules/backend/views/scripts/store/index.phtml
@@ -181,11 +181,13 @@
                     defaultValue: '0'
                 },
                  is_show_title: {
-                    title: 'Title shown',
-                    list: true,
+                    title: 'Title shown',                   
                     type: 'checkbox',
-                    values: { '0': 'No', '1': 'Yes' },
-                    defaultValue: '1'
+                    create: true,
+                    edit: true,
+                    list:true,
+                    values: { 0: 'No', 1: 'Yes' },
+                    defaultValue: 1
                 },
 /*                initSearchIndex: {
                     title: '',
