--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -25,7 +25,7 @@
   $this->users = $modelInfo->getNewActiveMembers(12);
   $this->supporters = $modelInfo->getNewActiveSupporters(12);
   //$this->plingproducts = $modelInfo->getNewActivePlingProduct(9);
-  
+
   //Latest Products
   $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(6);
   $this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(6);
@@ -36,7 +36,7 @@
   $this->productsAddons = $modelInfo->getLastProductsForHostStores(6);
   $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(6);
   $this->countSupporters = $modelInfo->getCountActiveSupporters();
-  
+
   //Top Products
   $this->topProductsThemesGTK = $modelInfo->getTopProductsForHostStores(6);
   $this->topProductsThemesPlasma = $modelInfo->getTopProductsForHostStores(6);
@@ -46,7 +46,7 @@
   $this->topProductsApps = $modelInfo->getTopProductsForHostStores(6);
   $this->topProductsAddons = $modelInfo->getTopProductsForHostStores(6);
   $this->topProductsWallpapers = $modelInfo->getTopProductsForHostStores(6);
-  
+
 
   $topProducts = new Default_View_Helper_FetchTopProductsForStore();
   $this->topProducts = $topProducts->fetchTopProducts();
@@ -80,6 +80,7 @@
 
   <?php
     $js_latestProducts = json_encode($this->productsLatestProducts);
+    $js_topProductsApps = json_encode($this->topProductsApps);
     $js_productsThemesGTK = json_encode($this->productsThemesGTK);
     $js_productsThemesPlasma = json_encode($this->productsThemesPlasma);
     $js_productsWindowmanager = json_encode($this->productsWindowmanager);
@@ -103,19 +104,13 @@
     Windowmanager:<?php echo $js_productsWindowmanager ?>,
     IconsCursors:<?php echo $js_productsIconsCursors ?>,
     Screenshots:<?php echo $js_productsScreenshots ?>,
-    Apps:<?php echo $js_productsApps ?>,
+    Apps:<?php echo $js_topProductsApps ?>,
     Addons:<?php echo $js_productsAddons ?>,
     Wallpapers:<?php echo $js_productsWallpapers ?>,
     Featured:<?php echo $js_featuredProducts ?>,
     TopProducts:<?php echo $js_topProducts ?>,
     LatestProducts:<?php echo $js_latestProducts ?>
   };
-
-  var users = <?php echo $js_users ?>;
-
-  var supporters = <?php echo $js_supporters ?>;
-
-  var comments = <?php echo $js_comments ?>;
 
 </script>
 
