--- a/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
+++ b/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
@@ -54,6 +54,9 @@ $this->supporters = $modelInfo->getNewActiveSupporters(9);
                </a>
                <?php } ?>
          </div>
+         <span>
+                <a href="/community#supportersPanel">see all</a>
+         </span>
         </div>
 
         <div  class="row sidebar-right-info" >       
