--- a/application/modules/default/views/scripts/product/partials/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectplings.phtml
@@ -49,7 +49,7 @@ $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.' style=
 
 if($cntplings==0)
 {
-    $out = $out. '<div class="plingbartext"><span class="plingnum">  Pling me </span> </div>';  
+    $out = $out. '<div class="plingbartext"><span class="plingnum">  Pling </span> </div>';  
 }
 else
 {
