--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -520,7 +520,7 @@ ul.meta-nav-top
               margin-top: -15px;
               .supporter-badge{
                   position: absolute;
-                  right: 0px;
+                  left: 0px;
                   bottom: 0px;
                   background: #EE6E09;
                   text-align: center;
@@ -2283,7 +2283,7 @@ span.page-views {
           float: right;
           .supporter-badge{
               position: absolute;
-              right: 0px;
+              left: 0px;
               bottom: 0px;
               background: #EE6E09;
               text-align: center;
@@ -3278,7 +3278,7 @@ span.page-views {
 
             .supporter-badge{
                 position: absolute;
-                right: 0px;
+                left: 0px;
                 bottom: 0px;
                 background: #EE6E09;
                 text-align: center;
