--- a/application/modules/default/views/scripts/explore/index-new.phtml
+++ b/application/modules/default/views/scripts/explore/index-new.phtml
@@ -56,7 +56,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
             </div>
 
               <div class="product-list">
-                  <h1>New Page Layout</h1>
+                  <h1>New Layout</h1>
                   <?php                
                   if (count($this->products) == 0) {
                       echo '<div class="empty">No products to show in this category.</div>';
