--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -60,6 +60,7 @@
    */
 
   $host = $_SERVER['REQUEST_URI'];
+  var_dump($host);
   if(strpos ( $host , ".cc" ) > 0) {
     $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"98,52,53,48,104,105");
     $this->topGames = $modelInfo->getLastProductsForHostStores(6,"98");
