--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -187,6 +187,12 @@ header div.container.header {
     padding: 20px 0;
     // background-image: url('../img/hp-section-bg.png');
 
+    .actions {
+      .mdl-button + .mdl-button {
+        margin-left: 3px;
+      }
+    }
+
     .section-header {
       position: relative;
 
@@ -223,13 +229,7 @@ header div.container.header {
     }
   }
 
-  #homepage-version-one {
-
-    .actions {
-      .mdl-button + .mdl-button {
-        margin-left: 3px;
-      }
-    }
+  #homepage {
 
     #introduction {
       padding-top: 100px;
@@ -240,6 +240,15 @@ header div.container.header {
         font-size: 14pt;
         line-height: 1.4;
         margin-bottom: 45px;
+      }
+
+      .mdl-button {
+        img {
+          height: 20px;
+          margin-right: 5px;
+          margin-top: -3px;
+                    
+        }
       }
     }
 
