--- a/application/modules/backend/views/scripts/store/index.phtml
+++ b/application/modules/backend/views/scripts/store/index.phtml
@@ -183,6 +183,15 @@ $tagHelper = new Backend_View_Helper_FetchPackagetypeTags();
                     values: { '0': 'No', '1': 'Yes' },
                     defaultValue: '0'
                 },
+                 is_show_title: {
+                    title: 'Title shown',                   
+                    type: 'checkbox',
+                    create: true,
+                    edit: true,
+                    list:true,
+                    values: { 0: 'No', 1: 'Yes' },
+                    defaultValue: 1
+                },
 /*                initSearchIndex: {
                     title: '',
                     width: '1%',
