--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -223,7 +223,7 @@ header div.container.header {
     }
   }
 
-  #homepage-version-one {
+  #homepage {
 
     .actions {
       .mdl-button + .mdl-button {
