--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -241,6 +241,15 @@ header div.container.header {
         line-height: 1.4;
         margin-bottom: 45px;
       }
+
+      .mdl-button {
+        img {
+          height: 20px;
+          margin-right: 5px;
+          margin-top: -3px;
+          
+        }
+      }
     }
 
   }
