--- a/application/modules/default/views/scripts/product/search.phtml
+++ b/application/modules/default/views/scripts/product/search.phtml
@@ -12,21 +12,12 @@ try {
 } catch (Exception $e) {
     Zend_Registry::get('logger')->err(__FILE__.'('.__LINE__.') -- params: '.print_r($param, true)."\n".' message: '."\n".$e->getMessage());
 
-    $this->result = array('hits' => array(), 'response' => array('numFound' => 0));
+    $this->result = array('hits' => array(), 'highlighting' =>array(),'response' => array('numFound' => 0));
 }
 $this->pagination = $pagination = $modelSearch->getPagination();
 $this->products = $this->result['hits'];
+
 $this->highlighting = $this->result['highlighting'];
-
-
-// foreach ($this->highlighting as $k => $v) 
-// { 
-//       print 'KEY: '; 
-//       var_dump($k); 
-//       print 'VAL: '; 
-//       var_dump($v); 
-//       print "\n"; 
-// }
 
 
 
