--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -223,7 +223,7 @@ header div.container.header {
     }
   }
 
-  #homepage-version-one {
+  #homepage {
 
     .actions {
       .mdl-button + .mdl-button {
@@ -240,6 +240,15 @@ header div.container.header {
         font-size: 14pt;
         line-height: 1.4;
         margin-bottom: 45px;
+      }
+
+      .mdl-button {
+        img {
+          height: 20px;
+          margin-right: 5px;
+          margin-top: -3px;
+          
+        }
       }
     }
 
