--- a/application/modules/default/views/scripts/explore/index-new.phtml
+++ b/application/modules/default/views/scripts/explore/index-new.phtml
@@ -31,14 +31,18 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 <main id="explore-content">
     <section class="wrapper" id="products-wrapper">
     <span class="glyphicon  togglesidebar" id="btnTogglesidebar" ></span>
+
     <div class="GridFlex">
+
       <div class="GridFlex-cell sidebar-left" >
           <?php  $time_start = microtime(true);echo $this->render('explore/partials/filter.phtml'); $time_elapsed = microtime(true) - $time_start; ?>
           <?php if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {
              echo '<div class="alert alert-warning" role="alert"><strong>Rendering Time: </strong>'.$time_elapsed.' s</div>';
           }?>
       </div>
+
       <div class="GridFlex-cell content">
+
         <section class="explore-products" id="explore-products">
 
             <div class="pling-nav-tabs">
@@ -51,7 +55,6 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                       <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
                           'top') ?>"><span><?= $this->translate('Top') ?></span></a>
                   </li>
-
               </ul>
             </div>
 
@@ -82,17 +85,18 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
           </section>
       </div>
 
-<?php
-$time_start = microtime(true);
-     $this->comments = $modelInfo->getLatestComments(5, $this->cat_id);
-     //$donations = $modelInfo->getLatestPlings(5, $this->cat_id);
-     $topprods = $modelInfo->getMostDownloaded(100, $this->cat_id);
-     $asidehide = '';
-     if(!$this->catabout && count($this->comments)==0  && count($topprods)==0 )
-     {
-        $asidehide = 'hide';
-     }
-?>
+      <?php
+        $time_start = microtime(true);
+        $this->comments = $modelInfo->getLatestComments(5, $this->cat_id);
+        //$donations = $modelInfo->getLatestPlings(5, $this->cat_id);
+        $topprods = $modelInfo->getMostDownloaded(100, $this->cat_id);
+        $asidehide = '';
+        if(!$this->catabout && count($this->comments)==0  && count($topprods)==0 )
+        {
+          $asidehide = 'hide';
+        }
+      ?>
+
       <div class="GridFlex-cell sidebar-right">
           <aside  id="explore-sidebar <?=$asidehide?>" >
              <?php
@@ -148,10 +152,12 @@ $time_start = microtime(true);
     $js_products = json_encode($this->products);
     $js_filters = json_encode($this->filters);
     $js_catid = json_encode($this->cat_id);
+    $js_topprod = json_encode($topprods);
   ?>
 
   var state = {
     products:<?php echo $js_products ?>,
+    topprod:<?php echo $js_topprod ?>,
     filters:<?php echo $js_filters ?>,
     catId:<?php echo $js_catid ?>
   };
