--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -60,15 +60,17 @@
    */
 
   $host = $_SERVER['SERVER_NAME'];
+  $package_type = $this->package_type;
+  
   
   if(strpos ( $host , ".cc" ) > 0) {
-    $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"98,52,53,48,104,105");
-    $this->topGames = $modelInfo->getTopProductsForHostStores(6,"98");
-    $this->topApps = $modelInfo->getTopProductsForHostStores(6,"98,52,53,48,104,105");
+    $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"98,52,53,48,104,105",$package_type);
+    $this->topGames = $modelInfo->getTopProductsForHostStores(6,"98",$package_type);
+    $this->topApps = $modelInfo->getTopProductsForHostStores(6,"98,52,53,48,104,105",$package_type);
   } else {
-    $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"6,234,239,243,244,245,388,391,392,450,481,492");
-    $this->topGames = $modelInfo->getTopProductsForHostStores(6,"6");
-    $this->topApps = $modelInfo->getTopProductsForHostStores(6,"234,239,243,244,245,388,391,392,450,481,492");  
+    $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"6,234,239,243,244,245,388,391,392,450,481,492",$package_type);
+    $this->topGames = $modelInfo->getTopProductsForHostStores(6,"6",$package_type);
+    $this->topApps = $modelInfo->getTopProductsForHostStores(6,"234,239,243,244,245,388,391,392,450,481,492",$package_type);  
   }
   
   
