--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -62,6 +62,7 @@
   $host = $_SERVER['SERVER_NAME'];
   $package_type = $this->package_type;
   
+  echo "<!-- PackageType: " . $package_type . " -->";
   
   if(strpos ( $host , ".cc" ) > 0) {
     $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"98,52,53,48,104,105",$package_type);
