--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -55,12 +55,12 @@
         $helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
         $helperImage = new Default_View_Helper_Image();
         $helpPrintDate = new Default_View_Helper_PrintDate();
-   * 
-   * 
+   *
+   *
    */
 
   $host = $_SERVER['SERVER_NAME'];
-  
+
   if(strpos ( $host , ".cc" ) > 0) {
     $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"98,52,53,48,104,105");
     $this->topGames = $modelInfo->getTopProductsForHostStores(6,"98");
@@ -68,10 +68,10 @@
   } else {
     $this->LatestProducts = $modelInfo->getLastProductsForHostStores(6,"6,234,239,243,244,245,388,391,392,450,481,492");
     $this->topGames = $modelInfo->getTopProductsForHostStores(6,"6");
-    $this->topApps = $modelInfo->getTopProductsForHostStores(6,"234,239,243,244,245,388,391,392,450,481,492");  
+    $this->topApps = $modelInfo->getTopProductsForHostStores(6,"234,239,243,244,245,388,391,392,450,481,492");
   }
-  
-  
+
+
 ?>
 
 <link type="text/css" rel="stylesheet" href="/theme/react/lib/mdl/material.min.css"/>
@@ -94,6 +94,8 @@
     TopGames:<?php echo $js_topGames ?>,
     TopApps:<?php echo $js_topApps ?>
   };
+
+  var view = 'home';
 
 </script>
 
