--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -98,6 +98,8 @@
     TopApps:<?php echo $js_topApps ?>
   };
 
+  var view = "home";
+
 </script>
 
 <script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
