--- a/application/modules/default/views/scripts/explore/index-new.phtml
+++ b/application/modules/default/views/scripts/explore/index-new.phtml
@@ -162,6 +162,8 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
     catId:<?php echo $js_catid ?>
   };
 
+  var view = "explore";
+
   console.log(state);
 
 </script>
