--- a/application/modules/default/views/scripts/explore/index-new.phtml
+++ b/application/modules/default/views/scripts/explore/index-new.phtml
@@ -31,18 +31,22 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 <main id="explore-content">
     <section class="wrapper" id="products-wrapper">
     <span class="glyphicon  togglesidebar" id="btnTogglesidebar" ></span>
+
     <div class="GridFlex">
-      <div class="GridFlex-cell sidebar-left" >          
+
+      <div class="GridFlex-cell sidebar-left" >
           <?php  $time_start = microtime(true);echo $this->render('explore/partials/filter.phtml'); $time_elapsed = microtime(true) - $time_start; ?>
           <?php if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {
              echo '<div class="alert alert-warning" role="alert"><strong>Rendering Time: </strong>'.$time_elapsed.' s</div>';
           }?>
       </div>
+
       <div class="GridFlex-cell content">
+
         <section class="explore-products" id="explore-products">
 
             <div class="pling-nav-tabs">
-              <ul class="nav nav-tabs pling-nav-tabs" id="sort">               
+              <ul class="nav nav-tabs pling-nav-tabs" id="sort">
                   <li  <?=$this->filters['order'] == 'latest' ? 'class="active"' :'' ?>>
                       <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
                           'latest') ?>"><span><?= $this->translate('Latest') ?></span></a>
@@ -50,17 +54,18 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                   <li <?=$this->filters['order'] == 'top' ? 'class="active"' :'' ?>>
                       <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
                           'top') ?>"><span><?= $this->translate('Top') ?></span></a>
-                  </li>      
-                  
+                  </li>
               </ul>
             </div>
 
               <div class="product-list">
                   <h1>New Layout</h1>
-                  <?php                
+                  <?php
                   if (count($this->products) == 0) {
                       echo '<div class="empty">No products to show in this category.</div>';
                   } else {
+                                      
+
                        $time_start = microtime(true);
                        echo $this->render('explore/partials/products.phtml');
                        $time_elapsed = microtime(true) - $time_start;
@@ -82,24 +87,25 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
           </section>
       </div>
 
-<?php
-$time_start = microtime(true);
-     $this->comments = $modelInfo->getLatestComments(5, $this->cat_id);
-     //$donations = $modelInfo->getLatestPlings(5, $this->cat_id);
-     $topprods = $modelInfo->getMostDownloaded(100, $this->cat_id);
-     $asidehide = '';
-     if(!$this->catabout && count($this->comments)==0  && count($topprods)==0 )
-     {
-        $asidehide = 'hide';
-     }
-?>
+      <?php
+        $time_start = microtime(true);
+        $this->comments = $modelInfo->getLatestComments(5, $this->cat_id);
+        //$donations = $modelInfo->getLatestPlings(5, $this->cat_id);
+        $topprods = $modelInfo->getMostDownloaded(100, $this->cat_id);
+        $asidehide = '';
+        if(!$this->catabout && count($this->comments)==0  && count($topprods)==0 )
+        {
+          $asidehide = 'hide';
+        }
+      ?>
+
       <div class="GridFlex-cell sidebar-right">
-          <aside  id="explore-sidebar <?=$asidehide?>" >                      
+          <aside  id="explore-sidebar <?=$asidehide?>" >
              <?php
                 echo $this->render('/home/partials/common_rightsidebar.phtml');
             ?>
 
-            <div  class="row sidebar-right-info" >                                           
+            <div  class="row sidebar-right-info" >
               <?php
               if (count($topprods) > 0) {
                   ?>
@@ -142,10 +148,30 @@ $time_start = microtime(true);
     </span>
 </div>
 </main>
+<script type="text/javascript">
 
+  <?php
+    $js_products = $this->productsJson;
+    $js_filters = $this->filtersJson;
+    $js_catid = $this->cat_idJson;
+    $js_topprod =$this->topprodsJson;
+  ?>
+
+  var state = {
+    products:<?php echo $js_products ?>,
+    topprod:<?php echo $js_topprod ?>,
+    filters:<?php echo $js_filters ?>,
+    catId:<?php echo $js_catid ?>
+  };
+
+  var view = "explore";
+
+  console.log(state);
+
+</script>
 <?php $this->inlineScript()->appendScript(
-    '    $(document).ready(function(){          
-            TooltipUser.setup("tooltipuserleft","left");  
-            TooltipUser.setup("tooltipuser","right");              
+    '    $(document).ready(function(){
+            TooltipUser.setup("tooltipuserleft","left");
+            TooltipUser.setup("tooltipuser","right");
         });
     ');
